syntax = "proto3";

option go_package = "cstati-events-presentation-abstractions";

package Cstati.Events.Presentation.Abstractions;

option csharp_namespace = "Cstati.Events.Presentation.Abstractions";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service CstatiEventsService {
  rpc Create(CreateCstatiEventsCommand) returns (CreateCstatiEventsCommandResponse);
  rpc Update(UpdateCstatiEventsCommand) returns (UpdateCstatiEventsCommandResponse);
  rpc Delete(DeleteCstatiEventsCommand) returns (DeleteCstatiEventsCommandResponse);

  rpc Get(GetCstatiEventsQuery) returns (GetCstatiEventsQueryResponse);
  rpc GetAll(GetAllCstatiEventsQuery) returns (GetAllCstatiEventsQueryResponse);
}

// Requests

message CreateCstatiEventsCommand {
  string name = 1;
}

message CreateCstatiEventsCommandResponse {
  string event_id = 1;
}

message UpdateCstatiEventsCommand {
  string event_id = 1;
  optional google.protobuf.StringValue excel_sheet_link = 2;
  CstatiEventStatusDto status = 3;
  optional google.protobuf.Timestamp date = 4;
  optional google.protobuf.StringValue location = 5;
  optional google.protobuf.Int32Value expected_guests_count = 6;
  string concurrency_token = 7;
}

message UpdateCstatiEventsCommandResponse { }

message DeleteCstatiEventsCommand {
  string event_id = 1;
  string concurrency_token = 2;
}

message DeleteCstatiEventsCommandResponse { }

message GetCstatiEventsQuery {
  string event_id = 1;
}

message GetCstatiEventsQueryResponse {
  GetCstatiEventsQueryResponseEvent event = 1;
}

message GetAllCstatiEventsQuery {
  optional google.protobuf.StringValue query = 1;
  repeated CstatiEventStatusDto statuses_filter = 2;
  int32 limit = 3;
}

message GetAllCstatiEventsQueryResponse {
  repeated GetAllCstatiEventsQueryResponseEvent events = 2;
}

// Contracts

enum CstatiEventStatusDto {
  CstatiEventStatusDto_None = 0;
  CstatiEventStatusDto_NotStarted = 1;
  CstatiEventStatusDto_InProgress = 2;
  CstatiEventStatusDto_Finished = 3;
}

message GetCstatiEventsQueryResponseEvent {
  string id = 1;
  string name = 2;
  optional google.protobuf.StringValue excel_sheet_link = 3;
  CstatiEventStatusDto status = 4;
  optional google.protobuf.Timestamp date = 5;
  optional google.protobuf.StringValue location = 6;
  optional google.protobuf.Int32Value expected_guests_count = 7;
  string concurrency_token = 8;
}

message GetAllCstatiEventsQueryResponseEvent {
  string id = 1;
  string name = 2;
  CstatiEventStatusDto status = 3;
}
